--- a/python/export/R110.yml
+++ b/python/export/R110.yml
@@ -1,8 +1,8 @@
 nom: Anglais de communication et initiation au vocabulaire technique
 code: R110
 semestre: 1
-heures_formation: '30'
-heures_tp: '20'
+heures_formation: 30
+heures_tp: 20
 acs:
 - - AC0115
 - []
@@ -19,13 +19,10 @@ contenu: >-
   Objectifs visés
   * Développer sa confiance en soi
   * Se présenter, présenter quelqu’un, interroger
-  * Savoir structurer son discours oral et écrit (courriel, conversation téléphonique,
-  visioconférence…)
+  * Savoir structurer son discours oral et écrit (courriel, conversation téléphonique, visioconférence…)
   * Décrire, expliquer un élément technique
-  * Savoir écouter, comprendre et analyser les demandes de son interlocuteur, suggérer
-  des solutions
+  * Savoir écouter, comprendre et analyser les demandes de son interlocuteur, suggérer des solutions
   * Reformuler, expliciter un message
   * Appréhender le vocabulaire technique des domaines cibles
   *  Extensions possibles : télécollaboration, télétandem.
-motscles: Anglais général et technique, situations de communication, expression et
-  compréhension.
+motscles: Anglais général et technique, situations de communication, expression et compréhension.
