--- a/python/export/R111.yml
+++ b/python/export/R111.yml
@@ -1,8 +1,8 @@
 nom: Expression-Culture-Communication Professionnelles (ECC1)
 code: R111
 semestre: 1
-heures_formation: '30'
-heures_tp: '21'
+heures_formation: 30
+heures_tp: 21
 acs:
 - []
 - - AC0215
@@ -18,8 +18,7 @@ contexte: >-
 contenu: >-
   * Rechercher, sélectionner ses sources et questionner leur fiabilité
   * Analyser et restituer des informations
-  * Produire des écrits courts, clairs, structurés, adaptés et répondant aux normes
-  de présentation professionnelle et académique (mail, argumentation courte…)
+  * Produire des écrits courts, clairs, structurés, adaptés et répondant aux normes de présentation professionnelle et académique (mail, argumentation courte…)
   * Réécrire et corriger ses documents
   * Découvrir des outils de traitement de texte et de partage des données
   * Renforcer les compétences linguistiques selon différents canaux
@@ -28,9 +27,7 @@ contenu: >-
   * Comprendre une situation de communication simple
   * Savoir utiliser des outils multimédia pour une présentation orale
   * Décrire et analyser l’image fixe et mobile
-  * Adopter des savoirêtre professionnels essentiels dans le travail en équipe (écoute,
-  reformulation, transmission des informations, explications…)
+  * Adopter des savoirêtre professionnels essentiels dans le travail en équipe (écoute, reformulation, transmission des informations, explications…)
   * S’initier aux objectifs du développement durable
   * Être sensible aux enjeux du monde contemporain
-motscles: Recherche documentaire, expression écrite, rédaction technique, expression
-  orale, médias, culture générale, esprit critique, développement durable
+motscles: Recherche documentaire, expression écrite, rédaction technique, expression orale, médias, culture générale, esprit critique, développement durable
