--- a/python/export/R212.yml
+++ b/python/export/R212.yml
@@ -2,7 +2,7 @@ nom: Projet Personnel et Professionnel
 code: R212
 semestre: 2
 heures_formation: ???
-heures_tp: '12'
+heures_tp: 12
 acs:
 - []
 - []
@@ -14,8 +14,7 @@ contexte: >-
 contenu: >-
   Se caractériser pour préparer son stage ou son alternance
   * Se présenter, se définir
-  * Exprimer l’intérêt professionnel, valeurs, motivations, traits de personnalité,
-  expériences professionnelles ou personnelles
+  * Exprimer l’intérêt professionnel, valeurs, motivations, traits de personnalité, expériences professionnelles ou personnelles
   * Mettre en valeur et présenter son savoirêtre
   * Identifier ses compétences
   * Préciser et exprimer ses souhaits
