--- a/python/export/R213.yml
+++ b/python/export/R213.yml
@@ -2,7 +2,7 @@ nom: Mathématiques des systèmes numériques
 code: R213
 semestre: 2
 heures_formation: ???
-heures_tp: '6'
+heures_tp: 6
 acs:
 - - AC0112
 - - AC0212
