--- a/python/export/R103.yml
+++ b/python/export/R103.yml
@@ -1,8 +1,8 @@
 nom: Réseaux locaux et équipements actifs
 code: R103
 semestre: 1
-heures_formation: '30'
-heures_tp: '16'
+heures_formation: 30
+heures_tp: 16
 acs:
 - - AC0113
   - AC0115
@@ -26,5 +26,4 @@ contenu: >-
   * Configuration d'un réseau segmenté en VLAN, lien Multivlan, communication Intervlan,
   * Redondance et détection de boucles dans un réseau commuté: STP, RSTP….
   Sur chaque thème, faire le lien avec les notions de cybersécurité abordées en R101.
-motscles: Réseaux locaux, Ethernet, commutateurs, routeurs, VLAN, 802.1Q, 802.1P,
-  STP, RSTP.
+motscles: Réseaux locaux, Ethernet, commutateurs, routeurs, VLAN, 802.1Q, 802.1P, STP, RSTP.
