--- a/python/export/R108.yml
+++ b/python/export/R108.yml
@@ -1,8 +1,8 @@
 nom: Bases des systèmes d'exploitation
 code: R108
 semestre: 1
-heures_formation: '27'
-heures_tp: '21'
+heures_formation: 27
+heures_tp: 21
 acs:
 - - AC0111
   - AC0114
@@ -14,19 +14,12 @@ sae:
 - SAÉ15
 prerequis: Aucun
 contexte: >-
-  Cette ressource traite des bases de l’utilisation d’un poste client et de son système
-  d’exploitation. 
-  Elle est essentielle pour la prise en main pratique d’un système informatique en
-  abordant notamment la gestion des données dans un espace de stockage (organisation,
-  recherche, droits) et la maîtrise d’un environnement numérique, deux thèmes attendus
-  par le référentiel PIX (https://pix.fr/competences).
-  Cette ressource  introduit également un usage avancé du système d’exploitation nécessaire
-  au besoin d’un professionnel R&T. Elle vise la maîtrise de commandes en ligne pour
-  gérer l’arborescence de fichiers, les programmes et les processus du système d’exploitation,
-  par exemple pour exécuter un programme ou configurer les éléments d’un site Web  (compétence
-  RT3-Programmer). Elle vise également l’emploi des principales commandes réseau,
-  dans des scripts simples. Ces commandes sont les bases d’appui pour administrer
-  - par la suite - un réseau et de ses services (compétence RT1-Administrer).
+  Cette ressource traite des bases de l’utilisation d’un poste client et de son système d’exploitation. 
+  Elle est essentielle pour la prise en main pratique d’un système informatique en abordant notamment la gestion des données dans un espace de stockage (organisation, recherche, droits) et la maîtrise d’un
+  environnement numérique, deux thèmes attendus par le référentiel PIX (https://pix.fr/competences).
+  Cette ressource  introduit également un usage avancé du système d’exploitation nécessaire au besoin d’un professionnel R&T. Elle vise la maîtrise de commandes en ligne pour gérer l’arborescence de fichiers,
+  les programmes et les processus du système d’exploitation, par exemple pour exécuter un programme ou configurer les éléments d’un site Web  (compétence RT3-Programmer). Elle vise également l’emploi des
+  principales commandes réseau, dans des scripts simples. Ces commandes sont les bases d’appui pour administrer - par la suite - un réseau et de ses services (compétence RT1-Administrer).
   Elle contribue donc aux apprentissages critiques mentionnés précédemment. 
 contenu: >-
   * Systèmes d'exploitations Windows/Linux, InterfaceHommeMachine et ligne de commande
@@ -37,7 +30,5 @@ contenu: >-
   * Se documenter sur le détail des commandes en français/anglais (commande man)
   * Consulter et modifier les variables d’environnement
   * Commandes réseau (wget, curl, ping, traceroute, netstat, nmap…)
-  * Initiation aux scripts pour l’automatisation de séquences de commandes, aux structures
-  de contrôle
-motscles: Programmation, arborescence, processus, scripts, variables d’environnement,
-  PIX.
+  * Initiation aux scripts pour l’automatisation de séquences de commandes, aux structures de contrôle
+motscles: Programmation, arborescence, processus, scripts, variables d’environnement, PIX.
