--- a/python/export/R208.yml
+++ b/python/export/R208.yml
@@ -1,8 +1,8 @@
 nom: Analyse et traitement de données structurées
 code: R208
 semestre: 2
-heures_formation: '16'
-heures_tp: '10'
+heures_formation: 16
+heures_tp: 10
 acs:
 - []
 - []
@@ -16,14 +16,10 @@ sae:
 - SAÉ24
 prerequis: Aucun
 contexte: >-
-  Le professionnel R&T est amené à développer différents outils informatiques à usage
-  personnel ou interne à l’équipe (compétence RT3-Programmer). Ces outils peuvent
-  traiter des données complexes, viser des fonctionnalités multiples et être développé
-  en équipe : il est alors nécessaire - pour le professionnel R&T - de structurer
-  son travail, tant sur les variables manipulant les données, les fichiers qui les
-  sauvegardent ou les restaurent, que sur l’organisation (arborescence) de son projet.
-  La ressource introduit ses éléments structurels en contribuant à l’acquisition des
-  apprentissages critiques mentionnés précédemment.
+  Le professionnel R&T est amené à développer différents outils informatiques à usage personnel ou interne à l’équipe (compétence RT3-Programmer). Ces outils peuvent traiter des données complexes, viser
+  des fonctionnalités multiples et être développé en équipe : il est alors nécessaire - pour le professionnel R&T - de structurer son travail, tant sur les variables manipulant les données, les fichiers
+  qui les sauvegardent ou les restaurent, que sur l’organisation (arborescence) de son projet. La ressource introduit ses éléments structurels en contribuant à l’acquisition des apprentissages critiques
+  mentionnés précédemment.
 contenu: >-
   * Structure d'un programme : arborescence de fichiers, modules et packages
   * Contexte d’exécution : programme principal vs script
@@ -39,5 +35,4 @@ contenu: >-
   * Initiation aux expressions régulières
   * Introduction au traitement des erreurs
   L’utilisation de l’anglais est préconisée dans la documentation du code.
-motscles: Algorithmes, langages de programmation, structure de données, méthodologie
-  de développement, gestion de versions
+motscles: Algorithmes, langages de programmation, structure de données, méthodologie de développement, gestion de versions
