--- a/python/export/R210.yml
+++ b/python/export/R210.yml
@@ -2,7 +2,7 @@ nom: Anglais de communication et développement de l’anglais technique
 code: R210
 semestre: 2
 heures_formation: ???
-heures_tp: '30'
+heures_tp: 30
 acs:
 - - AC0112
 - []
@@ -17,14 +17,10 @@ contexte: >-
   Aucun
 contenu: >-
   Objectifs visés
-  * Savoir structurer son discours oral et écrit (courriel, conversation téléphonique,
-  visioconférence, réunion, débat)
-  * Présenter son parcours professionnel à l’oral et à l’écrit (CV, lettre de motivation,
-  entretien)
+  * Savoir structurer son discours oral et écrit (courriel, conversation téléphonique, visioconférence, réunion, débat)
+  * Présenter son parcours professionnel à l’oral et à l’écrit (CV, lettre de motivation, entretien)
   * Analyser des problèmes et proposer des solutions
   * Faire un exposé technique
   * Développer le vocabulaire technique des domaines cibles
-  * Extensions possibles : télécollaboration, télétandem, parcours international,
-  dispositif EMILE.
-motscles: Anglais général et technique, situations de communication professionnelle,
-  expression et compréhension.
+  * Extensions possibles : télécollaboration, télétandem, parcours international, dispositif EMILE.
+motscles: Anglais général et technique, situations de communication professionnelle, expression et compréhension.
