--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -1,12 +1,12 @@
 S1:
-  SAÉ11: "Réseaux / cybersécurité / hygiène informatique"
-  SAÉ12: "Réseau d'entreprise ou personnel"
-  SAÉ13: "Supports de transmission / calculs"
+  SAÉ11: "Se sensibiliser à l'hygiène informatique et à la cybersécurité"
+  SAÉ12: "S'initier aux réseaux informatiques"
+  SAÉ13: "Découvrir un dispositif de transmission"
   SAÉ14: "Se présenter sur Internet"
   SAÉ15: "Traiter des données"
 S2:
-  SAÉ21: "Construction d’un réseau informatique pour une petite structure"
-  SAÉ22: "Mesures et caractérisation d’un signal ou d’un système"
-  SAÉ23: "Mise en place d'une solution informatique pour l’entreprise"
+  SAÉ21: "Construire un réseau informatique pour une petite structure"
+  SAÉ22: "Mesurer et caractériser un signal ou un système"
+  SAÉ23: "Mettre en place une solution informatique pour l’entreprise"
   SAÉ24: "Projet intégratif de S2"
 
