Résout des problèmes d'encodage

--- a/python/pn/ressources.yml
+++ b/python/pn/ressources.yml
@@ -10,7 +10,7 @@ S1:
   R109: "Introduction aux technologies Web"
   R110: "Anglais de communication et initiation au vocabulaire technique"
   R111: "Expression-Culture-Communication Professionnelles 1"
-  R112: "PPP: Connaître son champ d'activité"
+  R112: "Projet Personnel et Professionnel"
   R113: "Mathématiques du signal"
   R114: "Mathématiques des transmissions"
   R115: "Gestion de projet"
@@ -26,6 +26,6 @@ S2:
   R209: "Initiation au développement Web"
   R210: "Anglais de communication et développement de l'anglais technique"
   R211: "Expression-Culture-Communication Professionnelles 2"
-  R212: "PPP: Formalisation du projet"
+  R212: "Projet Personnel et Professionnel"
   R213: "Mathématiques des systèmes numériques"
   R214: "Analyse mathématique des signaux"
