--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -4,9 +4,10 @@ S1:
   SAÉ13: "Découvrir un dispositif de transmission"
   SAÉ14: "Se présenter sur Internet"
   SAÉ15: "Traiter des données"
+  SAÉ16: "Portfolio"
 S2:
   SAÉ21: "Construire un réseau informatique pour une petite structure"
   SAÉ22: "Mesurer et caractériser un signal ou un système"
   SAÉ23: "Mettre en place une solution informatique pour l’entreprise"
-  SAÉ24: "Projet intégratif de S2"
+  SAÉ24: "Projet intégratif"
 
