--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -8,6 +8,6 @@ S1:
 S2:
   SAÉ21: "Construire un réseau informatique pour une petite structure"
   SAÉ22: "Mesurer et caractériser un signal ou un système"
-  SAÉ23: "Mettre en place une solution informatique pour l’entreprise"
+  SAÉ23: "Mettre en place une solution informatique pour l'entreprise"
   SAÉ24: "Projet intégratif"
 
