Ajout SAE25 portfolio S2

--- a/python/pn/saes.yml
+++ b/python/pn/saes.yml
@@ -10,4 +10,6 @@ S2:
   SAÉ22: "Mesurer et caractériser un signal ou un système"
   SAÉ23: "Mettre en place une solution informatique pour l'entreprise"
   SAÉ24: "Projet intégratif"
+  SAÉ25: "Portfolio"
+
 
