--- a/yaml/saes.yml
+++ b/yaml/saes.yml
@@ -1,15 +1,37 @@
 S1:
-  SAÉ11: "Se sensibiliser à l'hygiène informatique et à la cybersécurité"
-  SAÉ12: "S'initier aux réseaux informatiques"
-  SAÉ13: "Découvrir un dispositif de transmission"
-  SAÉ14: "Se présenter sur Internet"
-  SAÉ15: "Traiter des données"
-  SAÉ16: "Portfolio"
+  SAÉ11:
+    nom: "Se sensibiliser à l'hygiène informatique et à la cybersécurité"
+    tags-thematiques: ["métier"]
+  SAÉ12:
+    nom: "S'initier aux réseaux informatiques"
+    tags-thematiques: ["métier"]
+  SAÉ13:
+    nom: "Découvrir un dispositif de transmission"
+    tags-thematiques: ["métier"]
+  SAÉ14:
+    nom: "Se présenter sur Internet"
+    tags-thematiques: ["métier"]
+  SAÉ15:
+    nom: "Traiter des données"
+    tags-thematiques: ["métier"]
+  SAÉ16:
+    nom: "Portfolio"
+    tags-thematiques: ["portfolio"]
 S2:
-  SAÉ21: "Construire un réseau informatique pour une petite structure"
-  SAÉ22: "Mesurer et caractériser un signal ou un système"
-  SAÉ23: "Mettre en place une solution informatique pour l'entreprise"
-  SAÉ24: "Projet intégratif"
-  SAÉ25: "Portfolio"
+  SAÉ21:
+    nom: "Construire un réseau informatique pour une petite structure"
+    tags-thematiques: ["métier"]
+  SAÉ22:
+    nom: "Mesurer et caractériser un signal ou un système"
+    tags-thematiques: ["métier"]
+  SAÉ23:
+    nom: "Mettre en place une solution informatique pour l'entreprise"
+    tags-thematiques: ["métier"]
+  SAÉ24:
+    nom: "Projet intégratif"
+    tags-thematiques: ["métier"]
+  SAÉ25:
+    nom: "Portfolio"
+    tags-thematiques: ["métier"]
 
 
